--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-176.4KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-3.11MB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: b9052488-e5b1-11ec-9535-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
-  - {name: 🇺🇸 美国-683.4KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
-  - {name: 🇺🇸 美国-5.05MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-21.25MB/s(Youtube:不良林), server: azhk.r.optage.moe, port: 44605, type: trojan, password: 23ff6d3a-db0a-4fa5-ad55-56a94fbd166b, sni: azhk.r.optage.moe, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-12.47MB/s(Youtube:不良林), server: azhk.r.optage.moe, port: 44601, type: trojan, password: 23ff6d3a-db0a-4fa5-ad55-56a94fbd166b, sni: azhk.r.optage.moe, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-8.81MB/s(Youtube:不良林), server: 139.162.47.114, port: 44605, type: trojan, password: 1529baee-f263-48a4-b95b-ac0a49814268, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.29MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-3.54MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇧🇷 巴西-2.96MB/s(Youtube:不良林), server: fr.n.optage.moe, port: 44612, type: trojan, password: 673c8e50-d1c4-4e1f-ae6f-3c694e769006, sni: fr.n.optage.moe, skip-cert-verify: true}
+  - {name: 🇧🇷 巴西-3.00MB/s(Youtube:不良林), server: 83.150.217.62, port: 44612, type: trojan, password: 1529baee-f263-48a4-b95b-ac0a49814268, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.30MB/s(Youtube:不良林), server: rackedgeuk510.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: rackedgeuk510.moonfree.top}}
+  - {name: 🇬🇧 英国-1.53MB/s(Youtube:不良林), server: 152.89.210.105, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇨🇭 瑞士-2.80MB/s(Youtube:不良林), server: 185.126.116.125, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇩🇪 德国-3.55MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇺🇸 美国-4.84MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.22MB/s(Youtube:不良林), server: sh.moonfree.top, port: 11262, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: sh.moonfree.top}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-176.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.54MB/s(Youtube:不良林)
+      - 🇧🇷 巴西-2.96MB/s(Youtube:不良林)
+      - 🇧🇷 巴西-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-176.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.54MB/s(Youtube:不良林)
+      - 🇧🇷 巴西-2.96MB/s(Youtube:不良林)
+      - 🇧🇷 巴西-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-176.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.54MB/s(Youtube:不良林)
+      - 🇧🇷 巴西-2.96MB/s(Youtube:不良林)
+      - 🇧🇷 巴西-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-176.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.54MB/s(Youtube:不良林)
+      - 🇧🇷 巴西-2.96MB/s(Youtube:不良林)
+      - 🇧🇷 巴西-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-176.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.54MB/s(Youtube:不良林)
+      - 🇧🇷 巴西-2.96MB/s(Youtube:不良林)
+      - 🇧🇷 巴西-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-176.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.54MB/s(Youtube:不良林)
+      - 🇧🇷 巴西-2.96MB/s(Youtube:不良林)
+      - 🇧🇷 巴西-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.60MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-176.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-683.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-21.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-8.81MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.54MB/s(Youtube:不良林)
+      - 🇧🇷 巴西-2.96MB/s(Youtube:不良林)
+      - 🇧🇷 巴西-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.30MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.53MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.80MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.22MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
