--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,117 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-192.4KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇭🇰 香港-250.4KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇺🇸 美国-6.38MB/s(Youtube:不良林), server: rackedgeuk510.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: rackedgeuk510.moonfree.top}}
-  - {name: 🇺🇸 美国-4.53MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-11.66MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.84MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
-  - {name: 🇯🇵 日本-7.05MB/s(Youtube:不良林), server: vjp1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp1.0bad.com}}
-  - {name: 🇭🇰 香港-334.6KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.40MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-7.11MB/s(Youtube:不良林), server: sh.moonfree.top, port: 11262, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: sh.moonfree.top}}
+  - {name: 🇩🇪 德国-1.82MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇺🇸 美国-5.33MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.08MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-6.24MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.78MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇭 瑞士-2.95MB/s(Youtube:不良林), server: 185.126.116.125, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇭🇰 香港-881.9KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-5.07MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.37MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-192.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-250.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.66MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-334.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-881.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-192.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-250.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.66MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-334.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-881.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-192.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-250.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.66MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-334.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-881.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-192.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-250.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-334.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-881.9KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-192.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-250.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.66MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-334.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-881.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-192.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-250.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.66MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-334.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-881.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-192.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-250.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.66MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-334.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-881.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-192.4KB/s(Youtube:不良林)
-      - 🇭🇰 香港-250.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-6.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.53MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.66MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-334.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.11MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.08MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.78MB/s(Youtube:不良林)
+      - 🇨🇭 瑞士-2.95MB/s(Youtube:不良林)
+      - 🇭🇰 香港-881.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
